# aipal-validation

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  ruff.toml  tmp.cmd
aipal_validation/: __init__.py  __main__.py  cli.py  requirements.txt
aipal_validation/config/: config_analysis.yaml  config_outlier.yaml  config_synthetic.yaml  config_training.yaml  sample.json
aipal_validation/data_preprocessing/: encounter_dataset_builder.py  generate_custom_samples.py  generate_ds_readmission_samples.py  generate_samples.py  util.py
aipal_validation/eval/: 0_strobe.py  10_auc_age_binning.py  10_batch_outlier_detection.py  10_performance_balanced_kids_adults.py  11_outlier_reference_comparison_adult.py  12_auc_roc_individual.py  12_roc_auc_plot_by_center.py  13_auc_roc_one_plot.py  1_reference_comparison.py  2_roc_auc_plot_cutoffs_all.py  3_bs_results.py  4_bs_results_per_center.py  5_pca.py  6_shap.py  7_outlier_train_test.py  8_outlier_city.py  9_auc_retrain_kids.py  util.py
aipal_validation/fhir/: __init__.py  fhir_extractor.py  fhir_filter.py  fhir_validator.py  util.py
aipal_validation/helper/: data_visualization.py  revision.py  util.py
aipal_validation/ml/: test.py  util.py
aipal_validation/outlier/: __init__.py  check_outlier.py  imputer.pkl  iso_forest_ALL.pkl  iso_forest_AML.pkl  iso_forest_APL.pkl  lof_ALL.pkl  lof_AML.pkl  lof_APL.pkl  scaler.pkl  train_outlier.py
aipal_validation/r/: console_predit.R  predict.R  predict_with_outlier.R  retrain_model.R  retrained_xgb_model.rds
cohort/: 0_strobe.py  1_reference_comparison.py  2_roc_auc_plot_cutoffs_all.py  util.py
debug/: all_origins.csv  data_flaws.py  eda.py  loo.py  stats.py
jupyter/: aipal_predict.ipynb  essen_feature_check.ipynb  get_shap_values.ipynb  metrics_query.ipynb  model_v2.json  outlier_detection.ipynb  unit_validation.ipynb  violins.ipynb
jupyter/publish/: 0_feature_description.ipynb  1_box_age_sex.ipynb  2_scatter_pca_features.ipynb  3_df_individual_merged.ipynb  3_df_individual_merged.py.py  4_true_false_pred_scores.ipynb  5_get_shap_values.ipynb  6_cv_results_chart.py  6_cv_results_tables.py  6_f1_line_chart.ipynb  7_cm&roc_all.ipynb  8_outlier_detection.ipynb  8_violins.ipynb  9_outlier_iso_lof.py  9_outlier_iso_lof_auc.py  9_outlier_iso_lof_auc_train.py  9_outlier_iso_lof_city.py  abstract_figure.py  cfg.yaml  cm&roc_all.ipynb  cm&roc_individual.ipynb  df_individual_merged.ipynb  false_predicted.ipynb  feature_description.ipynb  get_shap_values.ipynb  refine_model_outlier_by_true.ipynb  shannon.ipynb  tsne.ipynb  upload_2_sheets.ipynb
jupyter/publish/utils/: data_loader.py
r/: console_predit.R  predict.R  predict_with_outlier.R  retrain_model.R
synthetic_test_data/: README.md  generate_syntetic_data.py
synthetic_test_data/aipal/: data.csv
