[tool.poetry]
name = "AIPAL_Validation"
readme = "README.md"
version = "0.2.0"
license = "MIT License"
description = "A FHIR based validation pipeline for AIPAL"
authors = ["Merlin Engelke <Merlin.Engelke@uk-essen.de>"]

[tool.poetry.scripts]
aipal_validation = 'aipal_validation.cli:run'

[tool.poetry.dependencies]
python = "^3.9"
fhir-pyrate = {git = "https://github.com/UMEssen/FHIR-PYrate.git", branch = "main"}
wandb = "^0.15.8"
sqlalchemy = "^2.0.20"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
direnv = "^2020.12.3"
matplotlib = "^3.8.0"
scikit-learn = "^1.4.2"
openpyxl = "^3.1.3"
xgboost = "^2.1.0"
shap = "^0.46.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.14.0"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^22.3.0"
jupyter = "^1.0.0"


[tool.poetry.group.paper.dependencies]
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.isort]
profile = "black"
line_length = 88
